# qgis-attributeassignment-plugin

./: README.md  README_ja.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
attribute_assignment/: __init__.py  attribute_assignment.py  metadata.txt  test_suite.py
attribute_assignment/ui/: style.qss  style_loader.py
attribute_assignment/ui/main/: main.py  main.ui
attribute_assignment/utils/: click_handler.py
